Обновленные роуты и модели
