# docs/swagger.json
@@ -78,7 +78,50 @@
                 "responses": {}
             }
         },
-        "/createMarket": {
+        "/categories": {
+            "get": {
+                "description": "Данный запрос позволяет получить список всех категорий",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "Все категории",
+                "responses": {}
+            }
+        },
+        "/createCategories": {
+            "post": {
+                "description": "Данный запрос позволяет создать категорию, если формат данных соответствует структуре models.Category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "Создание категории",
+                "parameters": [
+                    {
+                        "description": "Categories data",
+                        "name": "categories",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.categoriesArray"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/createMarkets": {
             "post": {
                 "description": "Данный запрос позволяет создать магазин, если формат данных соответствует структуре models.Market",
                 "consumes": [
@@ -93,36 +136,21 @@
                 "summary": "Создание магазина",
                 "parameters": [
                     {
-                        "description": "Market data",
+                        "description": "Markets data",
                         "name": "market",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Market"
+                            "$ref": "#/definitions/handlers.marketsArray"
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
-        "/createProduct": {
+        "/createProducts": {
             "post": {
-                "description": "Данный запрос позволяет создать продукт, если формат данных соответствует структуре models.Product",
+                "description": "Создает несколько продуктов за один запрос",
                 "consumes": [
                     "application/json"
                 ],
@@ -132,15 +160,15 @@
                 "tags": [
                     "products"
                 ],
-                "summary": "Создание продукта",
+                "summary": "Создание нескольких продуктов",
                 "parameters": [
                     {
-                        "description": "Product data",
-                        "name": "market",
+                        "description": "Array of products",
+                        "name": "products",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Product"
+                            "$ref": "#/definitions/handlers.productsArray"
                         }
                     }
                 ],
@@ -160,29 +188,7 @@
                     "markets"
                 ],
                 "summary": "Все магазины",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/products": {
@@ -256,6 +262,15 @@
                 }
             }
         },
+        "handlers.categoriesArray": {
+            "type": "object"
+        },
+        "handlers.marketsArray": {
+            "type": "object"
+        },
+        "handlers.productsArray": {
+            "type": "object"
+        },
         "handlers.registrationData": {
             "type": "object",
             "required": [
@@ -274,12 +289,6 @@
                     "type": "string"
                 }
             }
-        },
-        "models.Market": {
-            "type": "object"
-        },
-        "models.Product": {
-            "type": "object"
         }
     },
     "securityDefinitions": {
